GNOME Bugzilla – Bug 679348
Back/Forward and Gear buttons not aligned with Shell interfaces
Last modified: 2014-07-21 20:37:13 UTC
Created attachment 217956 [details] mockup: before & after Apparently I got stuck in alignment mode today. Those are good days. The buttons don't line up with the shell elements. That bugs me.
So apparently it's also inconsistent with Jakub's high density Web mockups: https://github.com/gnome-design-team/gnome-mockups/raw/master/web/web-webpage.png His mockup also have more space on the top, and that looks way better.
Created attachment 231621 [details] [review] ephy-window: align the toolbar margins with the shell ones
Comment on attachment 231621 [details] [review] ephy-window: align the toolbar margins with the shell ones Attachment 231621 [details] pushed as e65adc6 - ephy-window: align the toolbar margins with the shell ones
(In reply to comment #1) > So apparently it's also inconsistent with Jakub's high density Web mockups: > https://github.com/gnome-design-team/gnome-mockups/raw/master/web/web-webpage.png > > His mockup also have more space on the top, and that looks way better. I am not convinced by this; looks a bit too fat for my taste, specially with tabs. Tabs have a gross top-margin. I think we need to flatten that before we can change the padding here.
Andreas, want to follow up on this or can we just close it?
As wontfix? Ok with me.