ephy-window: align the toolbar margins with the shell ones

https://bugzilla.gnome.org/show_bug.cgi?id=679348